# pk-system

./: README.md
app-service/: Cargo.toml
base-service/: Cargo.toml  Dockerfile  build-docker.sh  run-docker.sh
base-service/src/: config.rs  main.rs  models.rs  models.rs.save  time_utils.rs  utils.rs
base-service/src/api/: auth.rs  authentication.rs  form.rs  mod.rs
base-service/src/api/admin/: mod.rs
base-service/src/api/guest/: mod.rs
base-service/src/api/staff/: mod.rs
base-service/src/app/: auth.rs  mod.rs
base-service/src/app/admin/: mod.rs
base-service/src/app/guest/: mod.rs
base-service/src/app/staff/: mod.rs
base-service/src/db/: mod.rs  query.rs
db-service/: Cargo.toml  Dockerfile  build-docker.sh  run-docker.sh
db-service/src/: api.rs  main.rs  models.rs  utils.rs
db-service/src/db/: mod.rs  query.rs
db-service/src/utils/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/: App.vue  config.js  main.js  routes.js
frontend/src/components/: Finddoctor.vue  Infor.vue  Navbar.vue  Tutorial.vue
staff-frontend/: README.md  package-lock.json  package.json
staff-frontend/src/: App.vue  main.js
staff-frontend/src/api/: admin.js  auth.js  config.js  control.js  index.js  utils.js
staff-frontend/src/components/: AdminTable.vue  AutoCreateShiftDialog.vue  ClinicDetail.vue  ClinicTable.vue  DeleteDialog.vue  DoctorDetail.vue  DoctorTable.vue  FilterShiftDialog.vue  Form.vue  FormWithImage.vue  Header.vue  HospitalDetail.vue  (+24 more)
user-frontend/: README.md  package-lock.json  package.json
user-frontend/src/: App.vue
(+30 files in other folders)
